examples/test/testpolicy1717.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1717
  namespace: namespace455
spec:
  podSelector:
    matchLabels:
      key45: value32
      key32: value0
      key6: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value45
          key24: value43
      podSelector:
        matchLabels:
          key7: value26
